--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,6 @@ trigger_jenkins_deployment:
   script:
     - echo "Triggering Jenkins deployment pipeline..."
     - >
-      curl -X POST http://your-jenkins-server/job/your-jenkins-job-name/build \
-      --user your-jenkins-user:$JENKINS_API_TOKEN
+      curl -X POST http://localhost:8080/job/GitLab-Deploy/build --user Ahmed:$06eef629a44942149f1f448873593f4b
   only:
     - master
