--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,6 +68,6 @@ trigger_jenkins_deployment:
   script:
     - echo "Triggering Jenkins deployment pipeline..."
     - >
-      curl -X POST http://154.198.89.63:8080/job/GitLab-Deploy/build --user Ahmed:$06eef629a44942149f1f448873593f4b
+      curl -X POST http://154.198.89.63:8080/job/GitLab-Deploy/build --user Ahmed:$bilal096
   only:
     - master
